# tfjs

./: .bazelrc  .eslintrc.js  BUILD.bazel  WORKSPACE  cloudbuild_single_instance.yml  package.json  tsconfig.json  tsconfig_ts_library.json  tsconfig_tslint.json
browserstack-file-size/: cloudbuild.yml  karma.conf.js  package.json  test-ci.sh
browserstack-tests/: cloudbuild.yml  test-ci.sh
coral-tflite-delegate/: jasmine.json  package.json
e2e/: karma.conf.js  package.json
scripts/: cloudbuild_tfjs_core_expected.yml  manual_coverage_report.ts  publish-npm.ts  release-tfjs.ts  release-util.ts
tfjs/: BUILD.bazel  index.ts  package.json  tsconfig.json
tfjs-backend-cpu/: BUILD.bazel  index.ts  package.json
tfjs-backend-wasm/: BUILD.bazel  index.ts  package.json  tsconfig.json
tfjs-backend-webgl/: BUILD.bazel  package.json
tfjs-backend-webgpu/: BUILD.bazel  index.ts  package.json  tsconfig.json
tfjs-converter/: BUILD.bazel  index.ts  package.json  tsconfig.json
tfjs-converter/src/: BUILD.bazel  run_tests.ts  version_test.ts
tfjs-converter/src/data/: BUILD.bazel
tfjs-converter/src/executor/: BUILD.bazel  graph_model.ts  hash_table.ts
tfjs-converter/src/operations/: BUILD.bazel
tfjs-converter/src/operations/custom_op/: BUILD.bazel
tfjs-converter/src/operations/executors/: BUILD.bazel  arithmetic_executor.ts  arithmetic_executor_test.ts  basic_math_executor.ts  basic_math_executor_test.ts  control_executor_test.ts  convolution_executor.ts  convolution_executor_test.ts  creation_executor.ts  creation_executor_test.ts  dynamic_executor.ts  dynamic_executor_test.ts  evaluation_executor.ts  evaluation_executor_test.ts  graph_executor.ts  graph_executor_test.ts  hash_table_executor_test.ts  image_executor.ts  image_executor_test.ts  logical_executor.ts  logical_executor_test.ts  matrices_executor.ts  matrices_executor_test.ts  normalization_executor.ts  normalization_executor_test.ts  reduction_executor.ts  reduction_executor_test.ts  slice_join_executor.ts  slice_join_executor_test.ts  sparse_executor.ts  sparse_executor_test.ts  spectral_executor.ts  spectral_executor_test.ts  string_executor.ts  string_executor_test.ts  transformation_executor.ts  transformation_executor_test.ts
tfjs-converter/src/operations/op_list/: BUILD.bazel
tfjs-core/: BUILD.bazel  index.ts  package.json  tsconfig.json
tfjs-core/scripts/test_snippets/: BUILD.bazel  test_snippets.ts  util.ts
tfjs-core/src/: BUILD.bazel  browser_util_test.ts  buffer_test.ts  debug_mode_test.ts  engine_test.ts  flags_test.ts  globals_test.ts  gradients_test.ts  image_test_util.ts  kernel_registry_test.ts  profiler_test.ts  tape_test.ts  tensor.ts  tensor_test.ts  tensor_util_test.ts  test_async_backends.ts  types.ts  util.ts  util_base.ts  util_test.ts  variable_test.ts
tfjs-core/src/backends/: backend_test.ts
tfjs-core/src/io/: browser_files_test.ts  http_sync.ts  http_sync_test.ts  http_test.ts  indexed_db_test.ts  io_utils.ts  io_utils_test.ts  local_storage_test.ts  model_management_test.ts  passthrough_test.ts  router_registry_test.ts  types.ts  weights_loader_test.ts
tfjs-core/src/ops/: abs_test.ts  acos_test.ts  acosh_test.ts  add_n_test.ts  add_test.ts  all_test.ts  any_test.ts  arg_max_test.ts  arg_min_test.ts  arithmetic_test.ts  asin_test.ts  asinh_test.ts  atan_test.ts  atanh_test.ts  avg_pool_3d_test.ts  avg_pool_test.ts  axis_util_test.ts  basic_lstm_cell_test.ts  batch_to_space_nd_test.ts  batchnorm_test.ts  binary_ops_test.ts  bincount_test.ts  boolean_mask_test.ts  broadcast_args_test.ts  broadcast_to_test.ts  ceil_test.ts  clip_by_value_test.ts  clone_test.ts  complex_ops_test.ts  concat_test.ts  confusion_matrix_test.ts  conv1d_test.ts  conv2d_separable_test.ts  conv2d_test.ts  conv2d_transpose_test.ts  conv3d_test.ts  conv3d_transpose_test.ts  cos_test.ts  cosh_test.ts  cumprod_test.ts  (+127 more)
tfjs-core/src/ops/fused/: fused_conv2d_test.ts  fused_depthwise_conv2d_test.ts  fused_mat_mul_test.ts
tfjs-core/src/ops/image/: crop_and_resize_test.ts  flip_left_right_test.ts  grayscale_to_rgb_test.ts  non_max_suppression_async_test.ts  non_max_suppression_test.ts  resize_bilinear_test.ts  resize_nearest_neighbor_test.ts  rotate_with_offset_test.ts  threshold_test.ts  transform_test.ts
tfjs-core/src/ops/linalg/: band_part_test.ts  gram_schmidt_test.ts  qr_test.ts
tfjs-core/src/ops/losses/: absolute_difference_test.ts  compute_weighted_loss_test.ts  cosine_distance_test.ts  hinge_loss_test.ts  huber_loss_test.ts  log_loss_test.ts  mean_squared_error_test.ts  sigmoid_cross_entropy_test.ts  softmax_cross_entropy_test.ts
tfjs-core/src/ops/signal/: frame_test.ts  hamming_window_test.ts  hann_window_test.ts  stft_test.ts
tfjs-core/src/ops/sparse/: sparse_fill_empty_rows_test.ts  sparse_reshape_test.ts  sparse_segment_mean_test.ts  sparse_segment_sum_test.ts
tfjs-core/src/ops/spectral/: fft_test.ts  irfft_test.ts  rfft_test.ts
tfjs-core/src/ops/string/: string_n_grams_test.ts  string_split_test.ts  string_to_hash_bucket_fast_test.ts
tfjs-core/src/optimizers/: adadelta_optimizer_test.ts  adagrad_optimizer_test.ts  adam_optimizer_test.ts  adamax_optimizer_test.ts  momentum_optimizer_test.ts  optimizer_test.ts  rmsprop_optimizer_test.ts  sgd_optimizer_test.ts
tfjs-core/src/public/chained_ops/: register_all_chained_ops_test.ts
tfjs-data/: BUILD.bazel  index.ts  package.json
tfjs-layers/: BUILD.bazel  index.ts  package.json  tsconfig.json
tfjs-node/: package.json
tfjs-node-gpu/: package.json
tfjs-tfdf/: package.json
tfjs-tflite/: BUILD.bazel  index.ts  package.json  tflite_repositories.bzl
tfjs-tflite-node/: binding.gyp  compile_flags.txt  package.json  tsconfig.json
tfjs/src/: BUILD.bazel  index_test.ts  setup_test.ts
tfjs/tools/custom_module/: BUILD.bazel  cli.ts  cli_test.ts  esm_module_provider.ts  esm_module_provider_test.ts  model_parser.ts  model_parser_test.ts
tools/: BUILD.bazel  base64_bundle.bzl  base64_bundle.ts  base64_bundle_test.ts  custom_launchers.js  defaults.bzl  esbuild_es5.config.mjs  esbuild_es5.js  karma_template.conf.js  tfjs_bundle.bzl  (+3 more)
(+174 files in other folders)
