# Copyright 2021 Google LLC. All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# =============================================================================

load("//tools:defaults.bzl", "esbuild", "ts_library")
load("//tools:enumerate_tests.bzl", "enumerate_tests")

package(default_visibility = ["//visibility:public"])

ts_library(
    name = "tfjs_src_lib",
    srcs = [
        "version.ts",
    ],
    module_name = "@tensorflow/tfjs/src",
)

filegroup(
    name = "all_test_entrypoints",
    srcs = glob(
        ["**/*_test.ts"],
        exclude = [
            "setup_test.ts",
        ],
    ),
)

# Generates the 'tests.ts' file that imports all test entrypoints.
enumerate_tests(
    name = "tests",
    srcs = [":all_test_entrypoints"],
    root_path = "tfjs/src",
)

ts_library(
    name = "tfjs_test_lib",
    srcs = glob(["**/*_test.ts"]) + [":tests"],
    module_name = "@tensorflow/tfjs/src",
    deps = [
        "//tfjs:tfjs_lib",
        "//tfjs-core/src:tfjs-core_src_lib",
        "@npm//@types/jasmine",
        "@npm//jasmine",
    ],
)

esbuild(
    name = "tfjs_test_bundle",
    srcs = [
    ],
    entry_point = "setup_test.ts",
    external = [
        "fs",
        "util",
        "buffer",
    ],
    sources_content = True,
    deps = [
        "//tfjs:tfjs_lib",
        ":tfjs_test_lib",
        "//tfjs:package_json",
    ],
)
